2016/08/29: IGAS v113
    1. Block noname totem seems shouldn't be seen.

2016/08/28: IGAS v112
    1. Fix the IFTotem and TotemBar.

2016/08/28: IGAS v111
    1. Fix the lag for sorting container's items.
    2. Fix error for IFPortrait.

2016/08/24: IGAS v110
    1. Add RegisterUnitEvent for System.Widget.Frame.

2016/08/22: IGAS v109
    1. Fix the baghandler for bank bag.

2016/08/22: IGAS v108
    1. Fix for custom handler, bag handler and bagslot handler.

2016/08/15: IGAS v107
    1. Fix the bagslot won't display count when first login.

2016/08/14: IGAS v106
    1. Fix error for TreeView.

2016/08/14: IGAS v105
    1. Fix bugs and finished the bag-slot handler.

2016/08/04: IGAS v104
    1. Fix show/hide api for IFRune, IFStagger, IFClassPower.

2016/08/02: IGAS v103
    1. The mask system would display the position or size of the target.

2016/07/31: IGAS v102
    1. Add TopToBottom, LeftoToRight property to IFSecurePanel.

2016/07/31: IGAS v101
    1. Recode the whole unit system, to build a more clearly interface system for unit elements.
    2. Update for new PLoop System.

2016/07/22: IGAS v100
    1. Fix the memory increment for layoutpanel system.

2016/07/22: IGAS v99
    1. Add 'INCLUDE_NAME_PLATE_ONLY' for aura filter.

2016/07/22: IGAS v98
    1. The SPELL_UPDATE_USABLE doesn't work well, add a thread to force update usable for spell buttons.

2016/07/22: IGAS v97
    1. Remove useless codes.

2016/07/21: IGAS v96
    1. Update for wow 7.0 version.

2016/07/04: IGAS v95
    1. The secure panel can modify elements' position automatically.

2016/07/03: IGAS v94
    1. No debuff color for enemy's health bar.

2016/07/03: IGAS v93
    1. Improve the spell handler for clear bindings.

2016/07/03: IGAS v92
    1. Now the action buttons of the main bar would works well when been temporary shapeshifted.

2016/06/17: IGAS v91
    1. Fix the cooldown indicator display the number for blizzard's settings.

2016/06/17: IGAS v90