@@ -1,3 +1,6 @@
+2016/09/01: IGAS v114
+    1. The BagSlotHandler no longer refresh the buttons that is hidden, it should fix lags in some condition.
+
 2016/08/29: IGAS v113
     1. Block noname totem seems shouldn't be seen.
 
